# genemapper

./: .readthedocs.yaml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
src/genemapper/: __init__.py  cli.py
