[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genemapper"
version = "1.0.3"
description = "A command-line tool for retrieving GenBank metadata and mapping coding sequences between query and subject FASTA files to identify their most similar counterparts."
readme = "README.rst"
authors = [
  {name = "Mohammed Salim Dason", email = "mohammed.dason@polito.it"}
]
maintainers = [
  {name = "Mohammed Salim Dason", email = "mohammed.dason@polito.it"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "biopython>=1.78",
    "openpyxl==3.1.5",
    "pandas>2.0"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/salimdason/genemapper/issues"
changelog = "https://github.com/salimdason/genemapper/blob/master/changelog.md"
homepage = "https://github.com/salimdason/genemapper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
genemapper = "genemapper.cli:main"


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


